concord_macros/tests/trybuild/fail/codegen_contract/reserved_bytes_wrong_arity.stderr
error: reserved endpoint I/O family `Bytes` does not take type arguments
 --> tests/trybuild/fail/codegen_contract/reserved_bytes_wrong_arity.rs:8:12
  |
8 |         -> Bytes<u8>
  |            ^^^^^^^^^
